syntax = "proto3";
option go_package = "proto/pb";
import "common.proto";

// group service start
service GroupService{
  rpc CreateGroup(CreateGroupRequest)returns(common.AbsResponse);
}

message CreateGroupRequest{
  string name = 1;
  int32 courseId = 2;
  string teacherId = 3;
  string type = 4;
  repeated string days = 5;
  int32 roomId = 6;
  string lessonStartTime = 7;
  string groupStartDate = 8;
  string groupEndDate = 9;
}
// group service end
